// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiDescribedFormGroup props description is not rendered when it's not provided 1`] = `
<div
  class="euiDescribedFormGroup"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup props fullWidth is rendered 1`] = `
<div
  class="euiDescribedFormGroup euiDescribedFormGroup--fullWidth"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup props gutterSize is rendered 1`] = `
<div
  class="euiDescribedFormGroup"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-s-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup props props for the flex item containers are passed down 1`] = `
<div
  class="euiDescribedFormGroup"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-2"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <section
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup props third is rendered 1`] = `
<div
  class="euiDescribedFormGroup"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-2"
    >
      <div
        class="euiFormRow euiFormRow--fullWidth"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup props titleSize is rendered 1`] = `
<div
  class="euiDescribedFormGroup"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-l"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup renders 1`] = `
<div
  aria-label="aria-label"
  class="euiDescribedFormGroup testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            id="generated-id"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`EuiDescribedFormGroup ties together parts for accessibility 1`] = `
<div
  class="euiDescribedFormGroup"
  role="group"
>
  <div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-l-flexStart-baseline-row"
  >
    <div
      class="euiFlexItem euiDescribedFormGroup__descriptionColumn emotion-euiFlexItem-grow-1"
    >
      <h3
        class="euiTitle euiDescribedFormGroup__title emotion-euiTitle-xs"
      >
        Title
      </h3>
      <div
        class="euiText euiDescribedFormGroup__description emotion-euiText-s-euiTextColor-subdued"
      >
        <p>
          Test description
        </p>
      </div>
    </div>
    <div
      class="euiFlexItem euiDescribedFormGroup__fields emotion-euiFlexItem-grow-1"
    >
      <div
        class="euiFormRow euiFormRow--hasLabel"
        id="generated-id-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="true"
            class="euiFormLabel euiFormRow__label euiFormLabel-isInvalid"
            for="generated-id"
            id="generated-id-label"
          >
            Label
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <input
            aria-describedby="generated-id-help-0 generated-id-error-0 generated-id-error-1"
            id="generated-id"
          />
          <div
            aria-live="polite"
            class="euiFormErrorText euiFormRow__text"
            id="generated-id-error-0"
          >
            Error one
          </div>
          <div
            aria-live="polite"
            class="euiFormErrorText euiFormRow__text"
            id="generated-id-error-1"
          >
            Error two
          </div>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="generated-id-help-0"
          >
            Help text
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
